# devlog

./: .coverage  .gitignore  LICENSE  README.md  alembic.ini  devlog.db  pyproject.toml
.cursor/rules/: general.mdc
alembic/: env.py
alembic/versions/: 121031dedf54_add_dm_and_thread_features_to_messages.py  1bfb035d8cc6_initial_migration.py
app/: main.py
app/api/: messages.py  projects.py  tasks.py  users.py
app/crud/: __init__.py  message.py  project.py  task.py  user.py
app/db/: database.py
app/models/: __init__.py  message.py  project.py  task.py  user.py
app/resources/: __init__.py  message_resources.py  project_resources.py  task_resources.py  user_resources.py
app/schemas/: __init__.py  message.py  project.py  task.py  user.py
app/tools/: __init__.py  message_tools.py  project_tools.py  task_tools.py  user_tools.py
docs/: API.md  TODO.md  fastmcp_guide.md  inspector.md  resources_guide.md  setup_guide.md  tools_guide.md
tests/: conftest.py  test_api_messages.py  test_api_projects.py  test_api_tasks.py  test_api_users.py  test_crud_message.py  test_crud_project.py  test_crud_task.py  test_crud_user.py  test_database.py  test_integration_manual.py  test_main.py  test_message_resources.py  test_message_tools.py  test_models.py  test_project_resources.py  test_project_tools.py  test_schemas_message.py  test_schemas_project.py  test_schemas_task.py  test_schemas_user.py  test_task_resources.py  test_task_tools.py  test_user_resources.py  test_user_tools.py
